[package]
name = "pw"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.42", features=["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
keyring = { version = "3.6.3", features = ["windows-native", "linux-native"] }
whoami = "1.6.0"
anyhow = "1.0.98"
arboard = "3.6.1"